crates/vihaco/tests/compile_fail/composite_machine/loadable-without-device.rs
struct Child;

#[vihaco::composite]
struct BadMachine {
    #[loadable("child")]
    child: Child,
}

fn main() {}
